--- a/stylesul.css
+++ b/stylesul.css
@@ -1,4 +1,4 @@
-    body,
+body,
 html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -538,7 +538,7 @@ footer p:first-child {
 
     nav ul {
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content:center;
         gap: 15px;
     }
 
@@ -817,7 +817,7 @@ footer p:first-child {
         left: -100%;
         width: 250px;
         height: 100vh;
-        background-color: #cfc8c8;
+        background-color: #2e8b57;
         flex-direction: column;
         gap: 26px;
         align-items: start;
@@ -843,7 +843,7 @@ footer p:first-child {
         top: 15px;
         right: 40px;
         z-index: 1002;
-        color: #050505;
+        color: #ffffff;
     }
 
     .overlay {
